Map popup heading smaller when permalink is open to prevent overflow.

--- a/wp-content/themes/lbcore/resources/less/pages/map.less
+++ b/wp-content/themes/lbcore/resources/less/pages/map.less
@@ -36,6 +36,10 @@
                     min-width: 140px;
                     max-width: 15vw !important;
                 }
+
+                .map__popup-heading {
+                    font-size: 22px;
+                }
             }
         }
     }
